--- a/_posts/2011-12-21-android-actionbar.textile
+++ b/_posts/2011-12-21-android-actionbar.textile
@@ -16,7 +16,7 @@ You can either use an icon or a logo on the left side of the action bar.
 There is no good documentation how to design the logo. 
 I have not found a way to place the logo in the total left corner of the action bar. There is always some margin before with the background color of the action bar.
 
-!actionbar_logo.png!
+!/images/actionbar_logo.png!
 
 My guess is that the logo should be transparent with background color of the action bar.
 There is one "blog post":http://android-developers.blogspot.com/2011/04/customizing-action-bar.html about styling the action bar, but this post does not cover this topic.  
@@ -30,11 +30,12 @@ There are 3 navigation modes. One mode is tab navigation.
 Actions in the action bar can be ei	ther always be shown, if there is enough room  and/or with text or never.
 On Honeycomb tablet especially in portrait modus (eg Acer Icona A500 with Android 3.2), the space for tab navigation is not expanded if there are actions that are marked with "ifRoom". Instead of moving the icons to the overflow menu, the tabs are truncated. 
 The tabs loose the space against any icons.Instead you have to scroll within the tabs to view all tabs. 
-!actionbar_tabs_cut.png!
+
+!/images/actionbar_tabs_cut.png!
 
 On Ice Cream Sandwich the are at least folded, but I'm not sure if the use of space optimal.
 
-!actionbar_tabs_list.png!
+!/images/actionbar_tabs_list.png!
  
 
 h2. Actions without main bar
@@ -42,4 +43,4 @@ h2. Actions without main bar
 If you have tabs and disable the logo, icon and title, the tabs move to the top of the screen and stretch whole width.
 On a smartphone with Ice Cream Sandwich action icon are always moved to the next line.  
 
-!actionbar_newrow.png! 
+!/images/actionbar_newrow.png! 
