--- a/_posts/2011-12-21-android-actionbar.textile
+++ b/_posts/2011-12-21-android-actionbar.textile
@@ -4,8 +4,7 @@ title: Android Actionbar
 comments: true
 ---
 
-There are a few annoyances regarding the use of the ActionBar
-http://developer.android.com/guide/topics/ui/actionbar.html
+There are a few annoyances regarding the use of the "Action Bar":http://developer.android.com/guide/topics/ui/actionbar.html
 
 h2. Logo
 
